--- a/paper/tex/geschichtliches/geschichtliches_part.tex
+++ b/paper/tex/geschichtliches/geschichtliches_part.tex
@@ -12,15 +12,12 @@ Um darauf näher eingehen zu können werden folgende Meilensteine behandelt:
 todo Inhaltsverzeichnis (Sections)
 
 \import{geschichtliches/mcCullochPittsNeuron/}{mpNeuron.tex}
-\FloatBarrier
-\pagebreak
+\clearpage
 
 \import{geschichtliches/perceptor/}{perceptor.tex}
-\FloatBarrier
-\pagebreak
+\clearpage
 
 \import{geschichtliches/adeline/}{adeline.tex}
-\FloatBarrier
-\pagebreak
+\clearpage
 
 \import{geschichtliches/convolutionalNN/}{convolutionalnn.tex}
