--- a/paper/tex/verweise.bib
+++ b/paper/tex/verweise.bib
@@ -35,13 +35,19 @@
 }
 
 @misc{cnnHistory,
-  title = {{Convolutional NN)}},
+  title = {{Geschichte der Convolutional neuronalen Netze)}},
   howpublished = {\url{https://glassboxmedicine.com/2019/04/13/a-short-history-of-convolutional-neural-networks/}},
   note = {Aufgerufen am: 18-03-2020}
 }
 
 @misc{simpleComplexCell,
   title = {{Convolutional NN)}},
+  howpublished = {\url{https://adeshpande3.github.io/A-Beginner%27s-Guide-To-Understanding-Convolutional-Neural-Networks/}},
+  note = {Aufgerufen am: 18-03-2020}
+}
+
+@misc{cnnFunktionsweise,
+  title = {{Funktionsweise von Convolutional neuralen Netzen)}},
   howpublished = {\url{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1890437/}},
   note = {Aufgerufen am: 18-03-2020}
 }
