--- a/paper/tex/verweise.bib
+++ b/paper/tex/verweise.bib
@@ -17,7 +17,7 @@
 }
 
 @misc{pcImplementierung,
-  title = {{Perceptor - Python Implementierung}},
+  title = {{Perceptron - Python Implementierung}},
   howpublished = {\url{https://github.com/rasbt/mlxtend/blob/master/mlxtend/classifier/perceptron.py}},
   note = {Aufgerufen am: 16-03-2020}
 }
@@ -29,26 +29,38 @@
 }
 
 @misc{partAbl,
-  title = {{Khan Academy - Partielle Ableitungen (Funktion mit zwei Eingabewerten)}},
+  title = {{Khan Academy - Partielle Ableitungen (Funktion mit zwei Eingabewerten}},
   howpublished = {\url{https://www.youtube.com/watch?v=1CMDS4-PKKQ&t=542s}},
   note = {Aufgerufen am: 16-03-2020}
 }
 
 @misc{cnnHistory,
-  title = {{Geschichte der Convolutional neuronalen Netze)}},
+  title = {{Geschichte der Convolutional neuronalen Netze}},
   howpublished = {\url{https://glassboxmedicine.com/2019/04/13/a-short-history-of-convolutional-neural-networks/}},
   note = {Aufgerufen am: 18-03-2020}
 }
 
-@misc{simpleComplexCell,
-  title = {{Convolutional NN)}},
+@misc{cnnExplained,
+  title = {{Einführung Convolutional neural network}},
   howpublished = {\url{https://adeshpande3.github.io/A-Beginner%27s-Guide-To-Understanding-Convolutional-Neural-Networks/}},
   note = {Aufgerufen am: 18-03-2020}
 }
 
 @misc{cnnFunktionsweise,
-  title = {{Funktionsweise von Convolutional neuralen Netzen)}},
+  title = {{Funktionsweise - CNN}},
   howpublished = {\url{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1890437/}},
+  note = {Aufgerufen am: 18-03-2020}
+}
+
+@misc{openDataSets,
+  title = {{Öffentliche Datensätze - Übersicht}},
+  howpublished = {\url{https://github.com/awesomedata/awesome-public-datasets}},
+  note = {Aufgerufen am: 18-03-2020}
+}
+
+@misc{cnnFunktionsweise2,
+  title = {{Funktionsweise - CNN}},
+  howpublished = {\url{https://jaai.de/convolutional-neural-networks-cnn-aufbau-funktion-und-anwendungsgebiete-1691/}},
   note = {Aufgerufen am: 18-03-2020}
 }
 
