started explaining backpropagtion

--- a/paper/tex/aktuelleEntwicklung/aktuelles_part.tex
+++ b/paper/tex/aktuelleEntwicklung/aktuelles_part.tex
@@ -1,4 +1,14 @@
 \part{Aktuelle Entwicklung}
 
-\blindtext
+% Im folgenden Abschnitt werde ich auf die aktuelle Entwicklung der neuronalen Netze eingehen. Insbesondere wird dabei auch noch einmal der Lernalgorithmus dieser Netze beschrieben und wofür welche genauen Arten von Architekturen verwendet werden. 
+
+% Daraus resultieren folgende Leitfragen: 
+
+\begin{itemize}
+\item Wo können diese Verfahren eingesetzt werden, bzw. wo werden diese bereits eingesetzt?
+\item Welche Ansätze und Architekturen sind zur Zeit state-of-the-art?
+\end{itemize}
+
+\import{aktuelleEntwicklung/backpropagation/}{backpropagation.tex}
+\clearpage
 
