--- a/paper/tex/anhang/anhang.tex
+++ b/paper/tex/anhang/anhang.tex
@@ -1,4 +1,9 @@
 \import{geschichtliches/mcCullochPittsNeuron/}{mpNeuron_anhang.tex}
-\FloatBarrier
+\clearpage
+
+\import{aktuelleEntwicklung/architekturen/}{architekturen_anhang.tex}
+\clearpage
+
+
 
 
