--- a/paper/tex/geschichtliches/adeline/adeline.tex
+++ b/paper/tex/geschichtliches/adeline/adeline.tex
@@ -1,4 +1,4 @@
-\section{Adeline}
+\section{Adeline} \label{sc:adel}
 
 \subsection{Aufbau}
 
@@ -12,7 +12,7 @@ Im 1959 entwickelten der Stanford Professor Bernard Widrow und der Elektroingene
 \end{figure}
 
 
-\subsection{Lernalgorithmus}
+\subsection{Lernalgorithmus} \label{ss:la}
 
 Widrow und Hoff definierten die Delta-Regel für den Lernalgorithmus ihres Modells. Dieser ist auch unter dem Namen \emph{Least-Mean-Square-Algorithmus} bekannt und ist auch heute noch von Relevanz). Im Kern möchte man hierbei das Minimum einer Kostenfunktion über dem Modell bestimmen. Ich werde im folgenden Abschnitt darauf eingehen wie dieser funktioniert und wie genau er für dieses Modell eingesetzt werden kann. 
 
