--- a/paper/tex/seminar_main.tex
+++ b/paper/tex/seminar_main.tex
@@ -109,6 +109,11 @@ pdfauthor={Silas Hoffmann, inf103088}
 \newtcbtheorem[number within=section]{myderivation}{Herleitung}
 {colback=white!5,colframe=Periwinkle!35!black,fonttitle=\bfseries}{th}
 
+% custum german quoting
+\newcommand{\myquote}[1] {
+\glqq #1 \grqq
+}
+
 % -------------------------------------
 
 % Syntaxhighlighting festgelegt
