--- a/paper/tex/verweise.bib
+++ b/paper/tex/verweise.bib
@@ -64,6 +64,12 @@
   note = {Aufgerufen am: 18-03-2020}
 }
 
+@misc{archiOverview,
+  title = {{Übersicht - verschiedene Architekturen}},
+  howpublished = {\url{https://www.asimovinstitute.org/neural-network-zoo/}},
+  note = {Aufgerufen am: 22-03-2020}
+}
+
 @book{dlnielsen,
   title={Neural Networks and Deep Learning},
   author={Nielsen, M.A.},
