--- a/paper/tex/geschichtliches/adeline/adeline.tex
+++ b/paper/tex/geschichtliches/adeline/adeline.tex
@@ -125,7 +125,7 @@ Um den Gradientenvektor der Kostenfunktion (Regressionsquadratsumme) zu bestimme
 
 \vspace{2 mm}
 \begin{minipage}{\textwidth}
-\begin{myderivation}{Gradient}{theoexample}
+\begin{myderivation}{Gradient}{theoexample} \label{deri:grad}
 
 \begin{equation} \label{eq:gr1}
 \frac{\partial J}{\partial w_j} = \frac{\partial }{\partial w_j} \frac{1}{2} \sum_i  (t^{(i)} - o^{(i)})^2 \\
